housekeeping, removed unused imports, cleaned up some resource leaks, etc.